--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,12 @@
-*.o
-*.obj
-*.so
-*.a
-*.lib
-*.out
-*.app
-*.exe
-*.hex
-*.txt
-*.bin
-*.cubin
-*.ptx
-*.fatbin
-*.pdf
-*.mp4
-*.png
+*
+
+!*/
+
+!*.*
+
+!*.c
+!*.cpp
+!*.h
+!*.py
+!LICENSE
+!README
